Translation draft; Morphological analysis draft

--- a/debug.html
+++ b/debug.html
@@ -31,7 +31,13 @@
             {
               "type": "word",
               "data": {
-                "value": "(покло)но"
+                "value": "(покло)но",
+                "analyses": [
+                  {
+                    "lemma": "поклон",
+                    "partOfSpeech": "сущ. м."
+                  }
+                ]
               }
             },
             {
@@ -43,13 +49,15 @@
             {
               "type": "word",
               "data": {
-                "value": "дав[ꙑ](да"
+                "value": "дав[ꙑ](да",
+                "analyses": []
               }
             },
             {
               "type": "word",
               "data": {
-                "value": "и"
+                "value": "и",
+                "analyses": []
               }
             },
             {
@@ -61,7 +69,8 @@
             {
               "type": "word",
               "data": {
-                "value": "еси‐"
+                "value": "еси‐",
+                "analyses": []
               }
             }
           ]
@@ -71,7 +80,8 @@
             {
               "type": "word",
               "data": {
-                "value": "ѳа"
+                "value": "ѳа",
+                "analyses": []
               }
             },
             {
@@ -83,13 +93,15 @@
             {
               "type": "word",
               "data": {
-                "value": "къ"
+                "value": "къ",
+                "analyses": []
               }
             },
             {
               "type": "word",
               "data": {
-                "value": "матѳѣю"
+                "value": "матѳѣю",
+                "analyses": []
               }
             },
             {
@@ -101,7 +113,8 @@
             {
               "type": "word",
               "data": {
-                "value": "постои"
+                "value": "постои",
+                "analyses": []
               }
             },
             {
@@ -121,19 +134,22 @@
             {
               "type": "word",
               "data": {
-                "value": "за"
+                "value": "за",
+                "analyses": []
               }
             },
             {
               "type": "word",
               "data": {
-                "value": "нашего"
+                "value": "нашего",
+                "analyses": []
               }
             },
             {
               "type": "word",
               "data": {
-                "value": "сироту"
+                "value": "сироту",
+                "analyses": []
               }
             },
             {
@@ -145,7 +161,8 @@
             {
               "type": "word",
               "data": {
-                "value": "мо‐"
+                "value": "мо‐",
+                "analyses": []
               }
             }
           ]
@@ -155,7 +172,8 @@
             {
               "type": "word",
               "data": {
-                "value": "лви"
+                "value": "лви",
+                "analyses": []
               }
             },
             {
@@ -167,7 +185,8 @@
             {
               "type": "word",
               "data": {
-                "value": "дворѧнину"
+                "value": "дворѧнину",
+                "analyses": []
               }
             },
             {
@@ -179,7 +198,8 @@
             {
               "type": "word",
               "data": {
-                "value": "павлу"
+                "value": "павлу",
+                "analyses": []
               }
             },
             {
@@ -191,7 +211,8 @@
             {
               "type": "word",
               "data": {
-                "value": "пе‐"
+                "value": "пе‐",
+                "analyses": []
               }
             }
           ]
@@ -201,19 +222,22 @@
             {
               "type": "word",
               "data": {
-                "value": "трову"
+                "value": "трову",
+                "analyses": []
               }
             },
             {
               "type": "word",
               "data": {
-                "value": "брату"
+                "value": "брату",
+                "analyses": []
               }
             },
             {
               "type": "word",
               "data": {
-                "value": "дать"
+                "value": "дать",
+                "analyses": []
               }
             },
             {
@@ -225,7 +249,8 @@
             {
               "type": "word",
               "data": {
-                "value": "грамо‐"
+                "value": "грамо‐",
+                "analyses": []
               }
             }
           ]
@@ -235,7 +260,8 @@
             {
               "type": "word",
               "data": {
-                "value": "тѣ"
+                "value": "тѣ",
+                "analyses": []
               }
             },
             {
@@ -247,13 +273,15 @@
             {
               "type": "word",
               "data": {
-                "value": "не"
+                "value": "не",
+                "analyses": []
               }
             },
             {
               "type": "word",
               "data": {
-                "value": "дасть"
+                "value": "дасть",
+                "analyses": []
               }
             },
             {
@@ -265,13 +293,15 @@
             {
               "type": "word",
               "data": {
-                "value": "на"
+                "value": "на",
+                "analyses": []
               }
             },
             {
               "type": "word",
               "data": {
-                "value": "него"
+                "value": "него",
+                "analyses": []
               }
             },
             {
